# nto_final_2

./: .gitignore  README.md  pyproject.toml  scoring.py
configs/: base.yaml  system.yaml
configs/experiments/: baseline.yaml  high_recall.yaml
docs/baseline/: ONBOARDING.md  SETUP.md
docs/task/: data_description.md  metric_examples.md  task_description.md
notebooks/: EDA.ipynb
src/: __init__.py
src/competition/: README.md  __init__.py  features.py  ranking.py  validation.py
src/competition/generators/: __init__.py  base.py  global_popularity.py  registry.py  runner.py  tfidf_knn.py  user_author.py  user_genre.py
src/platform/: README.md  __init__.py
src/platform/cli/: __init__.py  config_loader.py  entrypoint.py
src/platform/core/: __init__.py  artifacts.py  dataset.py  logging.py  metrics.py  progress.py  submission_contract.py
src/platform/infra/: __init__.py  hashing.py  loaders.py  schema.py  time.py
src/platform/pipeline/: __init__.py  models.py  orchestrator.py  runtime.py
src/platform/pipeline/stages/: __init__.py  base.py  build_features.py  generate_candidates.py  make_submission.py  prepare_data.py  rank_and_select.py
src/platform/pipeline/workflows/: __init__.py  local_validation.py
tests/competition/: test_solution_api.py  test_solution_generators.py
tests/platform/: test_architecture_enforcement.py  test_pipeline_smoke.py  test_submission_contract.py
